# quantum-alpha-hunter

./: .env.example  .gitignore  .pre-commit-config.yaml  GETTING_STARTED.md  LICENSE  MACOS_SETUP.md  Makefile  NEXT_STEPS.md  PRODUCTION_USAGE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_DATA_SOURCES.md  SESSION_2_PROGRESS.md  SESSION_PROGRESS.md  auto-scanner.py  install.sh  pyproject.toml  pytest.ini  qaht-cli.py  qaht-sources.py  qaht.cfg  run.sh  setup_mac.sh
.github/workflows/: test.yml
config/: sources.yaml
dashboard/: README.md  dashboard.js  index.html  server.py
docs/: AGILE_MOVERS.md  COMPREHENSIVE_SCREENING_SYSTEM.md  IMPROVEMENTS.md  MARKET_SCANNING.md  NEWS_AND_SOCIAL_SOURCES.md  PRODUCTION_IMPROVEMENTS_SUMMARY.md  PRODUCTION_OPTIMIZATIONS.md  SESSION_SUMMARY_CRITICAL_FIXES.md  SESSION_SUMMARY_PRODUCTION_OPTIMIZATIONS.md  TESTING.md  UNIVERSE_VALIDATION.md
mcp-server/codex-mcp/: README.md  package-lock.json  package.json
qaht/: __init__.py  cli.py  config.py  db.py  logging_conf.py  schemas.py
qaht/backtest/: __init__.py  labeler.py  metrics.py  simulator.py
qaht/core/: production_optimizations.py  source_manager.py
qaht/crypto/: __init__.py  universe_builder.py
qaht/utils/: cache.py  (+6 more)
scripts/: comprehensive_system_test.py  daily_score_and_alert.py  demo.py  diagnose_model.py  generate_improved_synthetic_data.py  generate_synthetic_data.py  monthly_retrain.py  quick_test.py  run_full_pipeline.py  screen_agile_movers.py  screen_crypto_real.py  test_full_workflow.py  test_market_scanner.py  test_single_symbol.py  validate_setup.py
(+54 files in other folders)
